<?xml version="1.0" encoding="UTF-8"?>
<!--
  Author: Andrea Nuzzolese, Mario Caruso, Piero Conca
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>it.cnr.istc</groupId>
  <artifactId>stlab.csv2rdf</artifactId>
  <version>0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>STLab csv2rdf</name>
  <description>STLab csv2rdf method that is compliant with the minimal mode of the csv2rdf W3C Recommendation.</description>

  <prerequisites>
    <maven>3.0.3</maven>
  </prerequisites>

  <build>
    <plugins>
	  <!-- requires Java 8 -->
	  <plugin>
        <groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-enforcer-plugin</artifactId>
		<version>1.4.1</version>
        <executions>
          <execution>
            <id>enforce-java</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <message>Java 8 or higher is required to compile this module</message>
                  <version>1.8</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>.</directory>
              <includes>
                <include>datagen/**</include>
                <include>*.log</include>
              </includes>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.4.3</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>it.cnr.istc.stlab.csv2rdf.Csv2Rdf</mainClass>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.rat</groupId>
        <artifactId>apache-rat-plugin</artifactId>
        <version>0.12</version>
        <configuration>
          <excludes></excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.7</version>
        <configuration>
          <target>
            <property name="vm.args" value=""/>
            <java fork="true" jar="${project.build.directory}/${project.build.finalName}.jar"
                dir="${project.build.directory}">
              <jvmarg line="-Xmx1024m -XX:MaxPermSize=256M ${vm.args}"/>
            </java>
          </target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    
	<!-- Apache CLI -->
	<dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.3.1</version>
    </dependency>    
    
    <dependency>
    	<groupId>org.apache.jena</groupId>
	    <artifactId>apache-jena-libs</artifactId>
	    <version>3.1.0</version>
	    <type>pom</type>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-csv -->
	<dependency>
    	<groupId>org.apache.jena</groupId>
    	<artifactId>jena-csv</artifactId>
    	<version>3.1.0</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/net.sf.opencsv/opencsv -->
	<dependency>
    	<groupId>net.sf.opencsv</groupId>
	    <artifactId>opencsv</artifactId>
    	<version>2.3</version>
	</dependency>

  </dependencies>
  
  <repositories>
    <repository>
      <id>my-local-repo</id>
      <url>file://${basedir}/../commons/repo</url>
    </repository>
  </repositories>
</project>
